Added real table rows into breakdown

--- a/libs/jade/budget-results.jade
+++ b/libs/jade/budget-results.jade
@@ -453,21 +453,260 @@ block content
 					tr
 						th(scope="col", colspan="2") Spending
 				tbody
+					tr.table-collapse--toggle
+						td Bills
+						td.amount £50.00
+					tr.table-collapse
+						td(colspan="2")
+							table.budget
+								tbody
+									tr
+										td Rent or mortgage
+										td.amount £0.00
+									tr
+										td Council Tax / Rates
+										td.amount £0.00
+									tr
+										td Buildings and contents insurance
+										td.amount £0.00
+									tr
+										td Gas and electricity
+										td.amount £0.00
+									tr
+										td Water
+										td.amount £0.00
+									tr
+										td TV licence
+										td.amount £0.00
+					tr.table-collapse--toggle
+						td Household
+						td.amount £50.00
+					tr.table-collapse
+						td(colspan="2")
+							table.budget
+								tbody
+									tr
+										td Grocery shopping (include food, drinks, toiletries and cleaning supplies etc)
+										td.amount £0.00
+									tr
+										td Work lunches and coffees, teas etc
+										td.amount £0.00
+									tr
+										td Cigarettes and tobacco
+										td.amount £0.00
+									tr
+										td Alcohol (bought from an off-licence or shop but not from the pub, bar or restaurant)
+										td.amount £0.00
+									tr
+										td Clothing and footwear
+										td.amount £0.00
+									tr
+										td Repairs and house maintenance
+										td.amount £0.00
+									tr
+										td Hire purchases or conditional sale items (eg a sofa or TV paid in monthly instalments)
+										td.amount £0.00
+									tr
+										td Haircuts
+										td.amount £0.00
+									tr
+										td Laundrette
+										td.amount £0.00
+									tr
+										td Medicines (including prescription charges)
+										td.amount £0.00
+									tr
+										td Dentistry
+										td.amount £0.00
+									tr
+										td Insurance (life or home, but not travel)
+										td.amount £0.00
+					tr.table-collapse--toggle
+						td Leisure
+						td.amount £50.00
+					tr.table-collapse
+						td(colspan="2")
+							table.budget
+								tbody
+									tr
+										td Meals and drinks out
+										td.amount £0.00
+									tr
+										td Memberships (eg gym or cinema membership)
+										td.amount £0.00
+									tr
+										td Magazines and newspapers
+										td.amount £0.00
+									tr
+										td Books or music (in any format)
+										td.amount £0.00
+									tr
+										td Website subscriptions (eg news, dating or music/video streaming websites)
+										td.amount £0.00
+									tr
+										td Season tickets
+										td.amount £0.00
+									tr
+										td Cinema or theatre tickets
+										td.amount £0.00
+									tr
+										td Holiday (include cost of travel, accommodation, expenses while you’re there and travel insurance) 
+										td.amount £0.00
+									tr
+										td Cigarettes or other tobacco
+										td.amount £0.00
+									tr
+										td Lottery and pools
+										td.amount £0.00
+					tr.table-collapse--toggle
+						td Travel
+						td.amount £50.00
+					tr.table-collapse
+						td(colspan="2")
+							table.budget
+								tbody
+									tr
+										td Public transport (including season tickets)
+										td.amount £0.00
+									tr
+										td Taxis 
+										td.amount £0.00
+									tr
+										td Bicycle (including running costs such as repair or rental)
+										td.amount £0.00
+									tr
+										td Car rental (including petrol)
+										td.amount £0.00
+									tr
+										td Car hire as purchase payment
+										td.amount £0.00
+					tr.table-collapse--toggle
+						td Car
+						td.amount £50.00
+					tr.table-collapse
+						td(colspan="2")
+							table.budget
+								tbody
+									tr
+										td Car insurance
+										td.amount £0.00
+									tr
+										td Road tax
+										td.amount £0.00
+									tr
+										td Fuel
+										td.amount £0.00
+									tr
+										td MOT
+										td.amount £0.00
+									tr
+										td Car maintenance
+										td.amount £0.00
+									tr
+										td Breakdown or recovery
+										td.amount £0.00
+									tr
+										td Parking/congestion charges
+										td.amount £0.00
+					tr.table-collapse--toggle
+						td Child
+						td.amount £50.00
+					tr.table-collapse
+						td(colspan="2")
+							table.budget
+								tbody
+									tr
+										td Childcare
+										td.amount £0.00
+									tr
+										td Child support/maintenance
+										td.amount £0.00
+									tr
+										td Tuition fees
+										td.amount £0.00
+									tr
+										td School uniform
+										td.amount £0.00
+									tr
+										td School meals 
+										td.amount £0.00
+									tr
+										td Pocket money and school trips
+										td.amount £0.00
+									tr
+										td Nappies and baby items (if you haven’t already included in groceries)
+										td.amount £0.00
+					tr.table-collapse--toggle
+						td Family
+						td.amount £50.00
+					tr.table-collapse
+						td(colspan="2")
+							table.budget
+								tbody
+									tr
+										td Adult care (eg care home costs for an elderly relative)
+										td.amount £0.00
+									tr
+										td Christmas and birthday presents
+										td.amount £0.00
+									tr
+										td Pet-related expenses (eg vet bills, pet food and insurance)
+										td.amount £0.00
+					tr.table-collapse--toggle
+						td Debt
+						td.amount £50.00
+					tr.table-collapse
+						td(colspan="2")
+							table.budget
+								tbody
+									tr
+										td Mortgage, rent or any loans secured against your home
+										td.amount £0.00
+									tr
+										td Council Tax
+										td.amount £0.00
+									tr
+										td Credit card, store card debts or payday loans
+										td.amount £0.00
+									tr
+										td Bank or building society loans
+										td.amount £0.00
+									tr
+										td Personal loans
+										td.amount £0.00
+									tr
+										td Catalogue, home credit or in-store credit debts
+										td.amount £0.00
+									tr
+										td Overdrafts 
+										td.amount £0.00
+									tr
+										td Money borrowed from friends or family
+										td.amount £0.00
+									tr
+										td Income Tax, National Insurance and VAT
+										td.amount £0.00
+									tr
+										td Gas and electricity bills
+										td.amount £0.00
+									tr
+										td Child maintenance
+										td.amount £0.00
+									tr
+										td TV licence
+										td.amount £0.00
+									tr
+										td Hire purchase agreements
+										td.amount £0.00
+									tr
+										td Court fines
+										td.amount £0.00
 					tr
-						td Health, eg medicines/treatments
-						td.amount £70.50
-					tr
-						td Savings/investments
-						td.amount £60.00
-					tr
-						td Life insurance
-						td.amount £20.00
-					tr
-						td Health insurance
-						td.amount £15.00
+						td Savings
+						td.amount £50.00
 					tr.total
 						td Total
-						td.amount £165.50
+						td.amount £450.00
 			
 			.well
 				div#desktop-chart.hide-mobile(style="min-width: 310px; margin: 0 auto;")
