--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -440,11 +440,13 @@ table.budget {
                 content: "\f055\00a0\00a0";
                 font-weight: @font-weight-bolder;
                 font-family: FontAwesome, icomoon;
+                color: @gray-2;
             }
             &.active td:first-of-type:before {
                 content: "\f056\00a0\00a0";
                 font-weight: @font-weight-bolder;
                 font-family: FontAwesome, icomoon;
+                color: @gray-2;
             }
         }
         & > td {
