--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3083,11 +3083,13 @@ table.budget .table-collapse--toggle td:first-of-type:before {
   content: "\f055\00a0\00a0";
   font-weight: 700;
   font-family: FontAwesome, icomoon;
+  color: #606060;
 }
 table.budget .table-collapse--toggle.active td:first-of-type:before {
   content: "\f056\00a0\00a0";
   font-weight: 700;
   font-family: FontAwesome, icomoon;
+  color: #606060;
 }
 table.budget .table-collapse > td {
   padding: 0;
@@ -5072,6 +5074,25 @@ input.custom-dropdown__button {
   font-weight: 300;
   content: "\f077";
   color: #FFF;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  top: 52%;
+}
+.back-to-top-icon {
+  position: relative;
+  padding-left: 2.5em;
+  margin-left: -1rem;
+}
+.back-to-top-icon:after {
+  left: 1em;
+  font-family: 'Helvetica', 'FontAwesome';
+  font-weight: 300;
+  content: "\f077";
+  color: #229cff;
   text-align: center;
   position: absolute;
   top: 50%;
