--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -463,3 +463,12 @@ table.budget {
         }
     }
 }
+
+@media (min-width:@screen-lg-min) {
+    .summary-chart {
+        order: 1;
+    }
+    .summary-info {
+        order: 2;
+    }
+}
