Removed old styles

--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -415,6 +415,10 @@ div.tooltip:before {
     }
 }
 
+
+// BUDGETING TOOL
+// Needs to be sorted out
+
 .remove {
     float: right;
 }
@@ -461,14 +465,5 @@ table.budget {
         table tr td:first-of-type {
             padding-left: 1.5em;
         }
-    }
-}
-
-@media (min-width:@screen-lg-min) {
-    .summary-chart {
-        order: 1;
-    }
-    .summary-info {
-        order: 2;
     }
 }
