--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -34,7 +34,9 @@
             background-color: @gray-6;
         }
     }
-    
+    .-visited {
+        font-weight: @font-weight-bolder;
+    }
     ul {
         list-style: none;
         padding: 0;
