--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -6,6 +6,17 @@
 table {
     .spacing(margin,@box-spacing-vertical,0);
     border-collapse: collapse;
+    &.full-width {
+        width: 100%;
+    }
+    .total {
+        font-weight: @font-weight-bolder;
+        background-color: @gray-7;
+    }
+    .amount {
+        width: 30%;
+        text-align: right;
+    }
 }
 
 td, 
@@ -257,5 +268,38 @@ table.simple-table td {
     .spacing(margin,@box-spacing-vertical,0);
     & > table {
         margin: 0;
+    }
+}
+
+// Collapsible tables
+.table-collapse {
+    background: none;
+    display: none;
+    &--toggle {
+        cursor: pointer;
+        & td:first-of-type:before {
+            content: "\f055\00a0\00a0";
+            font-weight: @font-weight-bolder;
+            font-family: FontAwesome, icomoon;
+            color: @gray-2;
+        }
+        &.active td:first-of-type:before {
+            content: "\f056\00a0\00a0";
+            font-weight: @font-weight-bolder;
+            font-family: FontAwesome, icomoon;
+            color: @gray-2;
+        }
+    }
+    & > td {
+        padding: 0;
+        & > table {
+            margin: 0;
+        }
+    }
+    &:hover {
+        background: none;
+    }
+    table tr td:first-of-type {
+        padding-left: 1.5em;
     }
 }
