--- a/libs/jade/budgeting-tool.jade
+++ b/libs/jade/budgeting-tool.jade
@@ -99,5 +99,5 @@ block content
 							a(href="#") 7. Family
 						li.side-nav-beta__sibling
 							a(href="#") 8. Debt
-						li.side-nav-beta__sibling.-current
-							a(href="#") Results
+						li.side-nav-beta__sibling
+							a(href="budgeting-tool-results.html") Results
