--- a/libs/jade/budgeting-tool.jade
+++ b/libs/jade/budgeting-tool.jade
@@ -29,10 +29,12 @@ block content
 	.articleContent
 		.main-content__right
 			h2(style="margin-top: 0;") 2. Benefits
+			h2(style="margin-top: 0;") Income - Benefits
 
 			fieldset
 				label(for="income") Income support
 					a.remove(href="#") Remove
+					a.remove.u-pull-right(href="#") Remove
 				.field-group.field-group--dropdown
 					input#income(placeholder="£", type="number")
 					.dropdown
@@ -44,6 +46,7 @@ block content
 			fieldset
 				label(for="income") Tax credit
 					a.remove(href="#") Remove
+					a.remove.u-pull-right(href="#") Remove
 				.field-group.field-group--dropdown
 					input#income(placeholder="£", type="number")
 					.dropdown
