--- a/libs/jade/budgeting-tool-results.jade
+++ b/libs/jade/budgeting-tool-results.jade
@@ -840,7 +840,7 @@ block content
 				li
 					ul
 						li.side-nav-beta__sibling.-visited
-							a(href="budgeting-tool.html") Start
+							a(href="#") Start
 						li.side-nav-beta__sibling.-visited
 							a(href="budgeting-tool.html") Income
 						li.side-nav-beta__sibling.-visited
