Amend index for PIP

--- a/libs/jade/pip-contents.jade
+++ b/libs/jade/pip-contents.jade
@@ -1,7 +1,7 @@
 block settings
     - var title = "Help filling in your PIP2 form"
     - var sidebar = true
-    - var toolbars = true
+    //- var toolbars = true
     //- var cookiemonster = true
     - var mockup = true
 
@@ -37,14 +37,11 @@ block section-notice
 block content
     .articleContent
         div
-
             .steps
-                #[a.steps__link(href="#") #[span.steps--number 1]
-                b Check if you need permission or approval
+                #[a.steps__link(href="#") #[span.steps--number 1]]
+                p Check if you need permission or approval
                 p Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.]
-
-
-            p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
+                p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
 
             p If you’re #[a(href="#") moving from DLA to PIP] your payments won’t stop while you’re waiting for your PIP claim to be processed, as long as you make your claim for PIP within a month of being told by the DWP that you should.
 
