--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -192,6 +192,7 @@ pre[class*="language-"] {
     margin-top: 0;
     border-radius: 0 0 @form-border-radius @form-border-radius;
     font-size: .85rem;
+    max-height: 15rem;
 }
 
 /***************************************************************************
