--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -6,6 +6,7 @@
 table {
     .spacing(margin,@box-spacing-vertical,0);
     border-collapse: collapse;
+    //table-layout: fixed;
     &.full-width {
         width: 100%;
     }
