--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -50,6 +50,8 @@ block content
 					li
 						a(href="collapse.html") Collapse
 					li
+						a(href="charts.html") Charts
+					li
 						a(href="section-notice.html") Section Notices
 					li
 						a(href="toolbar.html") Content toolbar
